feat(global): added new field to CoursePlan, integrated flyway